--- a/www/app/Resources/views/partial/navbar.html.twig
+++ b/www/app/Resources/views/partial/navbar.html.twig
@@ -17,13 +17,13 @@
                     <a class="page-scroll" href="{{ path('homepage') }}#hero"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ path('homepage') }}#blog">Blog</a>
+                    <a class="page-scroll link-blog" href="{{ path('homepage') }}#blog">Blog</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ path('homepage') }}#about">About</a>
+                    <a class="page-scroll link-about" href="{{ path('homepage') }}#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ path('homepage') }}#shuwee">Shuwee</a>
+                    <a class="page-scroll link-shuwee" href="{{ path('homepage') }}#shuwee">Shuwee</a>
                 </li>
             </ul>
         </div>
