--- a/www/web/scss/pages/_post_details.scss
+++ b/www/web/scss/pages/_post_details.scss
@@ -4,6 +4,10 @@
     padding-top: 40px;
     padding-bottom: 80px;
 
+    h1 {
+      display: none;
+    }
+
     .img-container {
       background: #FFFFFF no-repeat scroll center center / contain;
       height: 300px;
