--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "components/loader";
 @import "components/nav";
 @import "components/social";
+@import "components/header";
 @import "components/footer";
 
 /* Pages */
