--- a/www/app/Resources/views/partial/footer.html.twig
+++ b/www/app/Resources/views/partial/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                Made with <span class="icon icon-heart" alt="passion"></span> by <a class="page-scroll" href="#about">Wanjee</a>.
+                Made with <span class="icon icon-heart" alt="passion"></span> by <a class="page-scroll link-about" href="{{ path('homepage') }}#about">Wanjee</a>.
             </div>
             <div class="col-sm-6 text-right">
                 {% include 'partial/social.html.twig' %}
