--- a/www/app/Resources/views/partial/navbar.html.twig
+++ b/www/app/Resources/views/partial/navbar.html.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="{{ path('homepage') }}#hero">
-                <img src="logo.png" class="img-responsive" alt="Wanjee">
+                <img src="{{ asset('img/wanjee_white_small.png') }}" class="img-responsive" alt="Wanjee">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="navigation-main">
