--- a/www/web/scss/pages/_home_hero.scss
+++ b/www/web/scss/pages/_home_hero.scss
@@ -21,6 +21,7 @@
         margin: 0 auto 10px;
         padding: 0;
         font-size: 42px;
+        text-shadow: 1px 1px 5px rgb(0, 0, 0);
       }
 
       h2 {
@@ -29,6 +30,7 @@
         margin-right: auto;
         padding: 0;
         font-size: 36px;
+        text-shadow: 1px 1px 5px rgb(0, 0, 0);
       }
     }
 
