--- a/www/app/Resources/views/post/teaser.html.twig
+++ b/www/app/Resources/views/post/teaser.html.twig
@@ -6,18 +6,21 @@
     </div>
 
     <div class="img-container">
-        <a class="img" style="background-image:url({{ post.webPath | imagine_filter('post_promoted') }});"
-           href="{{ postUrl }}"></a>
+        {% if post.webPath is not empty %}
+            <a href="{{ postUrl }}" style="background-image:url({{ post.webPath | imagine_filter('post_promoted') }});" ></a>
+        {% else %}
+            <a href="{{ postUrl }}"></a>
+        {% endif %}
     </div>
 
     <div class="copy-container">
         <div class="copy">
-            <h2><a href="{{ postUrl }}">{{ post.title }}</a></h2>
+            <h2><a href="{{ postUrl }}" class="link-blog">{{ post.title }}</a></h2>
 
             <div class="excerpt">
                 {{ post.summary }}
             </div>
         </div>
     </div>
-    <a class="link" href="{{ postUrl }}">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+    <a href="{{ postUrl }}" class="link link-blog">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
 </article>
