--- a/www/web/scss/pages/_post_details.scss
+++ b/www/web/scss/pages/_post_details.scss
@@ -1,5 +1,10 @@
 .post-details {
 
+  .inner-nav {
+    margin-top: 10px;
+    font-size: 14px;
+  }
+
   .post {
     padding-top: 40px;
     padding-bottom: 80px;
