--- a/www/web/scss/components/_header.scss
+++ b/www/web/scss/components/_header.scss
@@ -10,6 +10,13 @@
     color: #fff;
     height: 30vh;
 
+    h1 {
+      text-shadow: 1px 1px 5px #000;
+    }
+    .subheading {
+      text-shadow: 1px 1px 5px #000;
+    }
+
     .overlay {
       position: absolute;
       background-color: #000;
